# gitscrum_ticket_generator

./: README.md  database.py  git_scrum.py  main.py  models.py  process_mails.py  pull_mails.py  pyproject.toml  requirements.txt  send_mails.py  ticket_crud.py  tickets.db
